--- a/react-algolia/src/App.css
+++ b/react-algolia/src/App.css
@@ -17,17 +17,19 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+.posts-search {
+  margin-bottom: 1.5rem;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px 10px;
+  border-radius: 3px;
+  outline: 0;
+  display: block;
+  border: 1px solid rgb(42, 48, 57, 0.2);
+ 
+}
 .page-title {
-  background-image: linear-gradient(
-    -180deg,
-    transparent 0%,
-    transparent 64%,
-    rgb(255, 216, 95) 64%,
-    rgb(255, 216, 95) 87%,
-    transparent 87%,
-    transparent 100%
-  );
+
   font-size: 2em;
   color: rgb(42, 48, 57);
   line-height: 1.1;
@@ -67,7 +69,7 @@ main {
 
 .post-card-category {
   display: block;
-  color: rgb(11, 106, 230);
+  color:red;
   font-weight: 600;
   font-size: 0.75rem;
   line-height: 1.5;
@@ -81,9 +83,9 @@ main {
   letter-spacing: 0.008em;
   margin: 0px;
   padding: 0px;
-  color: rgb(42, 48, 57);
+  color: rgb(11, 106, 230);
   display: block;
-  font-size: 20px;
+  font-size: 15px;
   padding-bottom: 20px;
 }
 
@@ -106,7 +108,46 @@ main {
   line-height: 1.6;
 }
 
+.post-card p {
+
+font-size: medium;
+font-weight: 600;
+font-style: bold;
+}
+
 .state-message {
   color: rgb(42, 48, 57);
   font-weight: 600;
+}
+ .posts .how-section1{
+    margin-top:-15%;
+    padding: 5%;
+}
+.how-section1 .heading{
+   
+    color: red;;
+    font-size: 20px;
+}
+.how-section1 .subheading{
+    color: green;
+    font-size: 20px;
+}
+.how-section1 .row
+{
+    margin-top: 10%;
+}
+.how-img 
+{
+    text-align: center;
+}
+.how-img img{
+    width: 40%;
+}
+
+.summy-span{
+
+
+  font-size: medium;
+  font-weight: 700;
+
 }
