--- a/react-algolia/src/App.css
+++ b/react-algolia/src/App.css
@@ -151,3 +151,40 @@ font-style: bold;
   font-weight: 700;
 
 }
+.single-welcome-hero-form {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 50%;
+  padding: 0 30px;
+}
+.search-box input[type="text"]{
+  display: flex;
+  font-size: 14px;
+  color: #859098;
+  text-transform: capitalize;
+  font-weight: 500;
+}
+.welcome-hero {
+  position: relative;
+  background-position:center;
+  background-size:cover;
+  text-align: center;
+  height:800px;
+  z-index: 1;
+}
+.banner-img{
+
+width: 100%;
+max-height: 300px;
+
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+
